# PyWallpaper

./: LICENSE  README.md  pyproject.toml  trial.py
src/mypywallpaper/: __init__.py
