[project]
name = "mypywallpaper"
version = "0.1.0"
description = ""
license = { file = "LICENSE" }
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{ include = "mypywallpaper", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
